--- a/src/app/details-module/repos-list/repos-list.component.html
+++ b/src/app/details-module/repos-list/repos-list.component.html
@@ -2,11 +2,11 @@
 
 <div class="container">
   <div class="table-responsive">
-    <table class="table">
-      <thead>
-        <tr>
+    <table class="table table-bordered">
+      <thead class="bg-primary">
+        <tr class="text-white">
           <th scope="col">Name</th>
-          <th scope="col">url</th>
+          <th scope="col">URL</th>
         </tr>
       </thead>
 
