--- a/src/app/details-module/user-details/user-details.component.html
+++ b/src/app/details-module/user-details/user-details.component.html
@@ -11,6 +11,8 @@
 
                     <a href="{{current_user.html_url}}"><i class="mr-3 fa fa-github"></i></a>
 
+                    <a href="{{current_user.blog}}"><i class="mr-3 fas fa-blog"></i></a>
+
                 </div>
                 <div class="p-3 bg-black text-white">
                     <h6>{{current_user.location}}</h6>
