4: Spinner and Animation added to the application

--- a/src/app/details-module/repos-list/repos-list.component.html
+++ b/src/app/details-module/repos-list/repos-list.component.html
@@ -14,7 +14,7 @@
         <tr *ngFor="let obj of my_repos">
           <td>{{obj.full_name}}</td>
           <td>
-            <a routerLink="/details/{{obj.html_url}}">
+            <a href="{{obj.html_url}}">
               {{obj.html_url}}
             </a>
           </td>
