--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,5 @@
 <app-search-bar (newSearchEvent)="searchStream($event)"></app-search-bar>
+<app-spinner [spinner_display]="spinner_display"></app-spinner>
 
 <app-users-list [my_json]="users_data"
     [list_name]="list_name"
