--- a/src/app/shared-module/search-bar/search-bar.component.html
+++ b/src/app/shared-module/search-bar/search-bar.component.html
@@ -7,8 +7,7 @@
       <div class="form">
         <i class="fa fa-search"></i>
         <input type="text" class="form-control form-input" placeholder="Search Users..." #searchBox 
-        (input)
-        ="addNewTerm(searchBox.value)">
+        [formControl]="searchControl">
         <span class="left-pan"><i class="fa fa-github"></i></span>
       </div>
       
