--- a/src/app/details-module/details-module.component.html
+++ b/src/app/details-module/details-module.component.html
@@ -1,4 +1,6 @@
-<app-user-details [current_user]="current_user_data"></app-user-details>
+<app-user-details 
+[current_user]="current_user_data">
+</app-user-details>
 
 <app-users-list [my_json]="followers_array"
 [list_name]="list_name"
